examples/test/testpolicy6428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6428
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key39: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value7
          key8: value13
      podSelector:
        matchLabels:
          key3: value31
          key17: value27
          key1: value16
